# resume_smg

./: Cargo.toml  README.md  mcp.json
.github/workflows/: deploy.yml  main.yml
example/: config.json
indexes/: project_to_experiences.json  skill_to_experiences.json  skill_to_projects.json
resources/: experiences.json  info.json  projects.json  skills.json
src/: lib.rs  main.rs
tests/: test.rs
tools/: find_skill_clusters.json  get_basic_info.json  get_resume_indexes.json
tools/get_experience_details/: exp1.json  exp2.json
tools/get_experiences_using_skill/: kubernetes.json  rust.json  stripe.json  typescript.json
tools/get_project_details/: proj1.json  proj2.json  proj3.json
tools/get_projects_using_skill/: aws.json  kafka.json  kubernetes.json  rust.json  stripe.json  typescript.json
tools/get_shared_skills/proj1/: proj3.json
tools/get_shared_skills/proj2/: proj1.json  proj3.json
tools/get_skills_for_project/: proj1.json  proj2.json  proj3.json
